force-app/main/default/objects/Codecoupon__c/Codecoupon__c.object-meta.xml
<CustomObject>
    <label>Code Coupon</label>
    <nameField>
        <label>Libellé</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes Coupon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>