force-app/main/default/objects/Codecoupon__c/fields/Campagne__c.field-meta.xml
<CustomField>
    <fullName>Campagne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campagne</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Codes_coupon</relationshipName>
    <type>Lookup</type>
</CustomField>