force-app/main/default/objects/Codecoupon__c/fields/Disponible_cible__c.field-meta.xml
<CustomField>
    <fullName>Disponible_cible__c</fullName>
    <formula>IF( (ISBLANK(Nombremaximumdutilisations__c) || Nombredutilisations__c &lt;= Nombremaximumdutilisations__c) &amp;&amp; (Campagne__r.Datededebutsouscampagne__c &lt;= TODAY() &amp;&amp; Campagne__r.Datedefinsouscampagne__c &gt;= TODAY()) &amp;&amp; Campagne__r.IsActive =TRUE &amp;&amp; Campagne__r.Campagneciblee__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible ciblé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>