force-app/main/default/objects/Codecoupon__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Codes Coupon</relationshipLabel>
    <relationshipName>Codes_Coupon</relationshipName>
    <type>Lookup</type>
</CustomField>