force-app/main/default/objects/Codecoupon__c/fields/Nombredutilisations__c.field-meta.xml
<CustomField>
    <fullName>Nombredutilisations__c</fullName>
    <description>Incrémenté à chaque devis</description>
    <label>Nombre d&apos;utilisations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>