force-app/main/default/objects/Codecoupon__c/fields/Nombremaximumdutilisations__c.field-meta.xml
<CustomField>
    <fullName>Nombremaximumdutilisations__c</fullName>
    <label>Nombre maximum d&apos;utilisations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>